Fix alignment of audit pane

--- a/frontend/assets/history.css
+++ b/frontend/assets/history.css
@@ -182,7 +182,7 @@
   left: 0px;
   min-width: 100px;
   max-width: 50%;
-  margin: -1px 0px 10px 114px;
+  margin: -1px 0px 10px 154px;
   z-index: 1;
 }
 
